# easycat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ANALYSIS.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  FIX_REPORT.md  README.md  ROADMAP.md  TASKS.md  index.html  justfile  mkdocs.yml  package.json  pyproject.toml  requirements-docs.in  requirements-docs.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  nightly-validation.yml  release-validation.yml
.mkdocs/: hooks.py
00-hello-audio/: index.html
00-hello-audio/EXERCISES/: index.html
01-echo/: index.html  main.py
01-echo/EXERCISES/: index.html
02-transcribe/: index.html  streaming.py
02-transcribe/EXERCISES/: index.html
03-parrot-naive/: index.html
03-parrot-naive/EXERCISES/: index.html
04-vad-preroll/: index.html  main.py
04-vad-preroll/EXERCISES/: index.html
05-blocking-agent/: index.html  main.py
05-blocking-agent/EXERCISES/: index.html
06-streaming-agent/: index.html  main.py
06-streaming-agent/EXERCISES/: index.html
07-tools/: blocking_tool.py  index.html  main.py
07-tools/EXERCISES/: index.html
08-smart-turn/: index.html  main.py
08-smart-turn/EXERCISES/: index.html
09-interruption/: estimate.py  ignore.py  index.html
09-interruption/EXERCISES/: index.html
10-cleaning-signal/: index.html  replay.py
10-cleaning-signal/EXERCISES/: index.html
11-journal/: index.html  investigate.py
11-journal/EXERCISES/: index.html
11-journal/solutions/: index.html
12-evals-and-latency/: evals.py  generate_bundles.py  index.html  llm_judge.py
12-evals-and-latency/EXERCISES/: index.html
12-evals-and-latency/bundles/: turn_04_real_interrupt.bundle
13-swap-providers-and-transports/: index.html  main.py
13-swap-providers-and-transports/EXERCISES/: index.html
14-bring-your-own-agent/: index.html
14-bring-your-own-agent/EXERCISES/: index.html
15-operate-in-production/: index.html  main.py  translate.py
15-operate-in-production/EXERCISES/: index.html
docker/: Dockerfile  compose.yaml  entrypoint.sh
docs/: design-outbound-calls.md  migration-debug-first-runtime.md  observability.md
docs/deployment/: docker.md
docs/teaching/: .gitignore  FOLLOWUPS.md  README.md
examples/: __init__.py  agent_event_subscription.py  cartesia_voice.py  combined_providers.py  common.py  custom_stt_provider.py  custom_tts_provider.py  custom_vad_provider.py  debug_bundle.py  deepgram_stt.py  deepgram_tts.py  deepgram_voice.py  echo_cancellation.py  elevenlabs_stt.py  elevenlabs_tts.py  elevenlabs_voice.py  function_tools_langchain.py  function_tools_langgraph.py  function_tools_openai.py  function_tools_pydantic.py  journal_demo.py  journal_ui.py  langchain_voice.py  langgraph_voice.py  local_chat.py  noise_reduction_backends.py  openai_agents_voice.py  output_processors.py  push_to_talk.py  pydantic_ai_support_workflow.py  pydantic_ai_voice.py  pydantic_ai_workflow_voice.py  reconnecting_ws_client.py  responses_api_bridge.py  runtime_feedback.py  session_actions_langchain.py  session_actions_langgraph.py  session_actions_openai.py  session_actions_pydantic.py  smart_turn_demo.py  (+15 more)
examples/ec2_webrtc/: coturn.conf  deploy.sh  easycat-webrtc.service
examples/webrtc_static/: webrtc_client.html  webrtc_observability.html
perf/: baseline.json  bench_journal.py
plan/: README.md  TASKS.md  cleanup-ideas-1.txt  cleanup-ideas-2.txt  combined-cleanup-tasks.md  debug-runtime-redesign.md  design-outbound-calls.md  essential-debug-first-runtime.md  operating-model.md  peripheral-cartesia-provider.md  peripheral-cli.md  peripheral-deployment.md  peripheral-dx-onboarding.md  peripheral-eval-and-debugger-ui.md  peripheral-langchain-langgraph-bridge.md  peripheral-observability-and-cost.md  peripheral-provider-ecosystem.md  peripheral-redaction.md  peripheral-telephony-tts-output.md  session-decomp-overview.md  session-decomp-phase-0-turn-context.md  session-decomp-phase-1-stt-committer.md  session-decomp-phase-2-audio-router.md  session-decomp-phase-3-tts-scheduler.md  session-decomp-phase-4-cancel-orchestrator.md  session-decomp-phase-5-turn-runner.md  teaching-00-hello-audio.md  teaching-01-echo.md  teaching-02-transcribe.md  teaching-03-parrot-naive.md  teaching-04-vad-preroll.md  teaching-05-blocking-agent.md  teaching-06-streaming-agent.md  teaching-07-smart-turn.md  teaching-07-tools.md  teaching-08-interruption.md  teaching-08-smart-turn.md  teaching-09-interruption.md  teaching-09-noise-reduction.md  teaching-10-cleaning-signal.md  (+15 more)
plan/dx/: onramp-zen-dx-plan.md
plan/peripherals/: README.md  peripheral-cartesia-provider.md  peripheral-cli.md  peripheral-deployment.md  peripheral-dx-onboarding.md  peripheral-eval-and-debugger-ui.md  peripheral-langchain-langgraph-bridge.md  peripheral-observability-and-cost.md  peripheral-provider-ecosystem.md  peripheral-redaction.md  peripheral-telephony-tts-output.md
plan/roadmap/: README.md  combined-cleanup-tasks.md  current-code-status.md  essential-debug-first-runtime.md
plan/session-decomposition/: README.md  session-decomp-overview.md  session-decomp-phase-0-turn-context.md  (+5 more)
scripts/: regen_teaching_chapters.py  validate.py
search/: search_index.json
tests/: _bridge_helpers.py  _hypothesis_profiles.py  _marker_lint.py  conftest.py  stt_helpers.py  test_agent_runner.py  test_audio_format.py  test_audio_utils.py  test_bounded_queue.py  test_cancel.py  test_ci_workflow.py  test_config.py  test_dtmf.py  test_dx_helpers.py  test_events.py  test_examples.py  test_extras.py  test_health_check.py  test_helpers.py  test_legacy_removal.py  test_logging.py  test_metrics.py  test_noise_reduction.py  test_observability.py  test_provider_helpers.py  test_providers.py  test_public_api.py  test_quick.py  test_quickstart_e2e.py  test_reconnecting_ws.py  test_record_to.py  test_session.py  test_smart_turn.py  test_smoke.py  test_span_manager.py  test_strip_markdown.py  test_stt_base.py  test_stt_deepgram.py  test_stt_elevenlabs.py  test_stt_factory.py  (+20 more)
workstreams/: AGENTS.md
(+549 files in other folders)
