[project]
name = "easycat"
version = "0.1.0"
description = "Slim, batteries-included voice bot framework for AI Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pysbd>=0.3.4",
    "rich>=13.0",
    "typer>=0.16",
    "websockets>=16.0",
]

[project.scripts]
easycat = "easycat.cli:main"

[project.optional-dependencies]
openai-agents = ["openai-agents>=0.6.2"]
pydantic-ai = ["pydantic-ai>=0.1"]
openai = ["openai>=1.0.0"]
deepgram = ["deepgram-sdk>=3.0.0"]
elevenlabs = ["elevenlabs>=1.0.0"]
# Cartesia STT/TTS talk directly to the Cartesia WebSocket API via the
# core ``websockets`` dependency — no SDK install is required. This
# marker extra exists so downstream tooling (e.g. ``easycat doctor``)
# can enumerate the provider surface uniformly with the other ``[stt]``
# / ``[tts]`` extras.
cartesia = []
telephony = ["fastapi>=0.110.0", "python-multipart>=0.0.9", "twilio>=9.0.0", "uvicorn>=0.29.0"]
aec = ["livekit>=1.0.0"]
local = ["sounddevice>=0.4.6"]
rnnoise = ["pyrnnoise>=0.3.0", "requests>=2.31.0"]
# TEN VAD has a non-permissive license, so we do not vendor its
# binaries.  Users who accept the license can opt in here.
ten-vad = ["numpy>=1.24.0", "onnxruntime>=1.16.0", "ten-vad>=1.0.6.8"]
silero-vad = ["numpy>=1.24.0", "onnxruntime>=1.16.0"]
funasr-vad = ["numpy>=1.24.0", "onnxruntime>=1.16.0", "funasr-onnx>=0.4.1", "jieba>=0.42.1", "modelscope>=1.17.1"]
smart-turn = ["numpy>=1.24.0", "onnxruntime>=1.16.0"]
# Interactive debugger UI (peripheral-eval-and-debugger-ui.md).
debugger = [
    "aiohttp>=3.9.0",
]
webrtc = ["aiortc>=1.9.0", "aiohttp>=3.9.0"]
quickstart = [
    "sounddevice>=0.4.6",
    "openai>=1.0.0",
    "openai-agents>=0.6.2",
    "pyrnnoise>=0.3.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
]
all = [
    "aiortc>=1.9.0",
    "livekit>=1.0.0",
    "aiohttp>=3.9.0",
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=1.0.0",
    "fastapi>=0.110.0",
    "openai>=1.0.0",
    "openai-agents>=0.6.2",
    "python-multipart>=0.0.9",
    "sounddevice>=0.4.6",
    "pyrnnoise>=0.3.0",
    "requests>=2.31.0",
    "twilio>=9.0.0",
    "uvicorn>=0.29.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 99
target-version = "py311"
extend-exclude = ["src/easycat/cli/scaffold/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: deprecated alias for live-provider integration tests",
    "integration_local: in-process end-to-end tests with fake providers",
    "integration_socket: tests requiring localhost socket bind/connect permissions",
    "integration_live: tests requiring live API keys and optional provider extras",
    "slow: long-running end-to-end tests; opt in with '-m slow'",
]
