[project]
name = "easycat"
version = "0.1.0"
description = "Slim, batteries-included voice bot framework for AI Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "rich>=13.0",
    "sentencesplit>=0.0.4",
    "typer>=0.16",
    "websockets>=16.0",
]

[project.scripts]
easycat = "easycat.cli:main"

[project.entry-points.pytest11]
easycat = "easycat.debug._pytest_plugin"

[project.optional-dependencies]
openai-agents = ["openai-agents>=0.6.2"]
pydantic-ai = ["pydantic-ai>=1.99.0,<2.0.0"]
pydantic-ai-v2-beta = ["pydantic-ai==2.0.0b3"]
langchain = ["langchain-core>=1.3.3"]
langgraph = ["langchain-core>=1.3.3", "langgraph>=0.2.0"]
llama-agents = ["llama-index-workflows>=2.15.0,<3.0.0", "llama-agents-client>=0.3.0,<1.0.0"]
openai = ["openai>=1.0.0"]
deepgram = ["deepgram-sdk>=3.0.0"]
elevenlabs = ["elevenlabs>=2.50.0"]
# Cartesia STT/TTS talk directly to the Cartesia WebSocket API via the
# core ``websockets`` dependency — no SDK install is required. This
# marker extra exists so downstream tooling (e.g. ``easycat doctor``)
# can enumerate the provider surface uniformly with the other ``[stt]``
# / ``[tts]`` extras.
cartesia = []
telephony = ["fastapi>=0.110.0", "python-multipart>=0.0.29", "twilio>=9.0.0", "uvicorn>=0.29.0"]
aec = ["livekit>=1.0.0"]
local = ["sounddevice>=0.4.6"]
rnnoise = ["pyrnnoise>=0.3.0", "requests>=2.33.0"]
# TEN VAD has a non-permissive license, so we do not vendor its
# binaries.  Users who accept the license can opt in here.
ten-vad = ["numpy>=1.24.0", "onnxruntime>=1.16.0", "ten-vad>=1.0.6.8"]
silero-vad = ["numpy>=1.24.0", "onnxruntime>=1.16.0"]
funasr-vad = ["numpy>=1.24.0", "onnxruntime>=1.16.0", "funasr-onnx>=0.4.1", "jieba>=0.42.1", "modelscope>=1.17.1"]
smart-turn = ["numpy>=1.24.0", "onnxruntime>=1.16.0"]
# Interactive debugger UI (peripheral-eval-and-debugger-ui.md).
debugger = [
    "aiohttp>=3.13.5",
]
webrtc = ["aiortc>=1.9.0", "aiohttp>=3.13.5"]
webtransport = ["aioquic>=1.3.0,<2"]
quickstart = [
    "sounddevice>=0.4.6",
    "openai>=1.0.0",
    "openai-agents>=0.6.2",
    "pyrnnoise>=0.3.0",
    "requests>=2.33.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
]
all = [
    "aioquic>=1.3.0,<2",
    "aiortc>=1.9.0",
    "livekit>=1.0.0",
    "aiohttp>=3.13.5",
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=2.50.0",
    "fastapi>=0.110.0",
    "openai>=1.0.0",
    "openai-agents>=0.6.2",
    "llama-index-workflows>=2.15.0,<3.0.0",
    "llama-agents-client>=0.3.0,<1.0.0",
    "python-multipart>=0.0.29",
    "sounddevice>=0.4.6",
    "pyrnnoise>=0.3.0",
    "requests>=2.33.0",
    "twilio>=9.0.0",
    "uvicorn>=0.29.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
conflicts = [
    [
        { extra = "pydantic-ai" },
        { extra = "pydantic-ai-v2-beta" },
    ],
]

[dependency-groups]
dev = [
    "diff-cover>=9.2",
    "hypothesis>=6.100",
    "mutmut>=3.2.3",
    "mypy>=1.18",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 99
target-version = "py311"
extend-exclude = ["src/easycat/cli/scaffold/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Surface the slowest tests so regressions in test latency stay visible
# (core pytest CLI flags, so strict_config=true is unaffected).
addopts = "--durations=15 --durations-min=1.0"
testpaths = ["tests"]
strict_markers = true
strict_config = true
# Safety net: no single test should run for minutes. A hung test
# (e.g. an await on an event/future that never fires) is force-failed
# by pytest-timeout instead of blocking the whole suite indefinitely,
# and faulthandler dumps the stuck stack just before the timeout fires.
timeout = 60
timeout_method = "thread"
faulthandler_timeout = 55
markers = [
    "integration_local: in-process end-to-end tests with fake providers",
    "integration_socket: tests requiring localhost socket bind/connect permissions",
    "integration_live: tests requiring live API keys and optional provider extras",
    "slow: long-running end-to-end tests; opt in with '-m slow'",
    "contract: provider, protocol, or bridge contract tests",
    "latency: latency measurement or latency SLO tests",
    "stress: load, soak, or high-volume validation tests",
    "release: release-gate validation tests",
    "flaky: quarantined intermittent test; requires linked issue, owner, and review date",
    "provider_openai: OpenAI provider coverage",
    "provider_deepgram: Deepgram provider coverage",
    "provider_elevenlabs: ElevenLabs provider coverage",
    "provider_cartesia: Cartesia provider coverage",
    "surface_stt: STT surface coverage",
    "surface_tts: TTS surface coverage",
    "surface_agent: agent bridge surface coverage",
    "surface_transport: transport surface coverage",
    "surface_vad: VAD surface coverage",
    "agent_bridge: agent bridge contract or live coverage",
    "requires_extra(name): test requires an optional dependency extra",
    "provider(name): generic provider metadata for custom provider filtering",
]

[tool.mypy]
python_version = "3.11"
# Lenient-start: the default pass is informational and never fails on
# missing optional-dependency stubs (numpy / onnxruntime / openai-agents /
# livekit etc. are not installed in the lint env).
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
# cli/scaffold/templates contain duplicate top-level module names
# (e.g. `agent`: openai-agents/agent.py, text-chat/agent.py,
# pydantic-ai/agent.py) which crash mypy with exit code 2
# ("Duplicate module named 'agent'"); mirror the ruff extend-exclude.
exclude = [
    "src/easycat/cli/scaffold/templates/",
]
# Keep the default whole-repo pass quiet and non-pedantic so it is a
# pleasant "informational" signal; the gated core lives in the override
# below and is ratcheted package-by-package.
warn_unused_ignores = false
warn_redundant_casts = true

# --- GATED core. Day-one this is exactly the package that is already
# --- clean (easycat.debug = 0 errors with these settings). Ratchet by
# --- adding modules to this list as they reach zero errors:
# ---   easycat.stages.*   (2 errors today)
# ---   easycat.runtime.*  (3 errors today)
# ---   easycat.session.*  (13 errors today)
# --- NOTE: deliberately NOT enabling warn_return_any here - it surfaces
# --- a no-any-return error in debug/bundle.py:205 and would turn the
# --- day-one gate RED. Add it (and fix the return) in a later ratchet.
[[tool.mypy.overrides]]
module = [
    "easycat.debug.*",
]
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/easycat"]
branch = true
# coverage.py reads these tables, not pytest, so strict_config is unaffected.
omit = [
    "src/easycat/stubs.py",
    "src/easycat/__main__.py",
    "src/easycat/cli/__main__.py",
    "src/easycat/cli/scaffold/templates/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.mutmut]
# OPT-IN mutation testing. Run manually/nightly, NEVER per-PR:
#   uv run --group dev mutmut run
#   uv run --group dev mutmut results
# Scope is deliberately a handful of PURE-LOGIC modules with strong,
# fast unit tests -- mutation testing on async/IO/provider code is
# slow and noisy. Expand `paths_to_mutate` only as targeted coverage grows.
# NOTE: the key MUST be `paths_to_mutate` -- mutmut 3.x silently ignores any
# unknown key and falls back to guessing (which mutates the whole src/ tree).
paths_to_mutate = [
    "src/easycat/session/text.py",
    "src/easycat/session/interruption.py",
    "src/easycat/_audio_utils.py",
    "src/easycat/strip_markdown.py",
]
# Only run the focused unit tests that actually exercise the modules
# above, so each mutant is checked in seconds, not against all ~3300
# tests. `-p no:cacheprovider` keeps the copied mutants/ tree clean.
pytest_add_cli_args_test_selection = [
    "tests/test_strip_markdown.py",
    "tests/audio/test_audio_utils.py",
    "tests/session/test_session_helpers.py",
    "tests/session/test_session_streaming.py",
]
# mutmut copies source + the selected tests into a mutants/ tree and
# re-runs pytest there. The selected tests import tests-package support
# modules (conftest.py -> tests._marker_lint; test_session_streaming.py
# -> tests._bridge_helpers), so these must be copied too or every mutant
# errors on import and is miscounted.
also_copy = [
    "tests/__init__.py",
    "tests/conftest.py",
    "tests/_marker_lint.py",
    "tests/_bridge_helpers.py",
]
# Disable the global 60s timeout (mutmut applies its own per-mutant
# timeout) and silence collection-cache noise inside the mutants copy.
pytest_add_cli_args = [
    "-o",
    "timeout=0",
    "-p",
    "no:cacheprovider",
]
